Completed user micro-service.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "user-auth-service",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "user authentication service",
-  "main": "index.js",
+  "main": "user-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "DEBUG=users:* PORT=3333 SEQUELIZE_CONNECT=sequelize-sqlite.yaml node user-server"
   },
   "repository": {
     "type": "git",
